trunk/Archive2/04/b44a5703378dad/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
In file included from main.cpp:1:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/initializer_list:36:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:4:3: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
  auto x = {1,2,3,4,5};
  ^
main.cpp:4:12: error: cannot deduce type of initializer list because std::initializer_list was not found; include <initializer_list>
  auto x = {1,2,3,4,5};
           ^
main.cpp:5:8: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
  for (auto x:x) {
       ^
main.cpp:5:14: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
  for (auto x:x) {
             ^
3 warnings and 2 errors generated.
